--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
   "author": "Zeljko Beratovic",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/express-jwt": "^6.0.4",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/multer": "^1.4.7",
     "@types/node": "^17.0.15",
-    "express": "^4.17.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "express-jwt": "^6.1.2",
+    "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "typeorm": "^0.2.41"
   }
